--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -4,20 +4,20 @@ html {
   background-size: cover;
 }
 
-html #welcome {
+#welcome {
   width: 100vw;
   height: 100vh;
   color: #fff;
 }
 
-html #welcome #halfPizza {
+#welcome #halfPizza {
   height: 125%;
   position: absolute;
   top: -12%;
   right: 70%;
 }
 
-html #welcome #textWrapper {
+#welcome #textWrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +39,7 @@ html #welcome #textWrapper {
           align-items: center;
 }
 
-html #welcome #textWrapper h1 {
+#welcome #textWrapper h1 {
   position: relative;
   left: -10px;
   font-family: 'Amatic SC', cursive;
